--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Acme&family=Bakbak+One&family=Josefin+Sans:wght@500&family=Moon+Dance&family=Quicksand:wght@500&family=Righteous&family=Secular+One&family=Tilt+Prism&family=Varela+Round&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
