--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <!-- Google Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Acme&family=Bakbak+One&family=Josefin+Sans:wght@500&family=Moon+Dance&family=Quicksand:wght@500&family=Righteous&family=Secular+One&family=Tilt+Prism&family=Varela+Round&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Acme&family=Bakbak+One&family=Josefin+Sans:wght@500&family=Moon+Dance&family=Poppins:wght@700&family=Quicksand:wght@500&family=Righteous&family=Secular+One&family=Tilt+Prism&family=Varela+Round&display=swap"
       rel="stylesheet"
     />
 
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Blog Spot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
