--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <!-- Google Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Acme&family=Bakbak+One&family=Josefin+Sans:wght@500&family=Moon+Dance&family=Poppins:wght@700&family=Quicksand:wght@500&family=Righteous&family=Secular+One&family=Tilt+Prism&family=Varela+Round&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Acme&family=Bakbak+One&family=Bruno+Ace+SC&family=Josefin+Sans:wght@500&family=Moon+Dance&family=Poppins:wght@700&family=Quicksand:wght@500&family=Righteous&family=Secular+One&family=Tilt+Prism&family=Varela+Round&display=swap"
       rel="stylesheet"
     />
 
