--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script
+      src="https://kit.fontawesome.com/2d85133c8b.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
